# smithy-java

./: settings.gradle.kts
buildSrc/src/main/kotlin/: smithy-java.examples-conventions.gradle.kts
client-core/src/main/java/software/amazon/smithy/java/client/core/: ClientPipeline.java  ClientProtocol.java
client-http/: build.gradle.kts
client-http/src/main/java/software/amazon/smithy/java/client/http/: HttpClientProtocol.java  HttpContext.java
client-in-memory/: build.gradle.kts
client-in-memory-cbor/: build.gradle.kts
client-in-memory-cbor/src/main/java/software/amazon/smithy/java/client/inmemory/: DafnyProtocol.java  InMemoryCborProtocol.java
client-in-memory-cbor/src/main/java/software/amazon/smithy/protocol/traits/: InMemoryCborTrait.java
core/: build.gradle.kts
examples/end-to-end-example/: build.gradle.kts  smithy-build.json
examples/end-to-end-example/model/: coffeeCallbacks.smithy  endpoints.smithy  main.smithy  order.smithy
examples/end-to-end-example/src/main/rust/: Cargo.toml
examples/end-to-end-example/src/main/rust/src/: main.rs
examples/end-to-end-in-memory-example/: build.gradle.kts  smithy-build.json
examples/end-to-end-in-memory-example/model/: main.smithy  order.smithy
in-memory-api/: build.gradle.kts
in-memory-api/src/main/java/software/amazon/smithy/protocol/traits/: InMemoryCborTrait.java  InMemoryJavaTrait.java
protocol-tests/: build.gradle.kts
server-in-memory-cbor/: build.gradle.kts
server/src/main/java/software/amazon/smithy/java/server/: ServerBuilder.java
(+83 files in other folders)
